--- a/src/Mammut.Web/appsettings.json
+++ b/src/Mammut.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MammutDb": "Data Source=./data/mammut.db"
+  },
   "AllowedHosts": "*"
 }
